feat: add dev auth login
